// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkInfoBanner should render correctly 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div>
        <section
          class="bpk-info-banner bpk-info-banner--success"
          role="alert"
        >
          <div
            class="bpk-info-banner__header"
          >
            <span
              class="bpk-info-banner__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-info-banner__success-icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22.5C6.201 22.5 1.5 17.799 1.5 12S6.201 1.5 12 1.5 22.5 6.201 22.5 12 17.799 22.5 12 22.5zm5.56-12.44a1.5 1.5 0 00-2.12-2.12l-4.94 4.939-1.94-1.94a1.5 1.5 0 00-2.12 2.122l3 3a1.5 1.5 0 002.12 0l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="bpk-info-banner__message"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </span>
          </div>
          <div
            style="height: 0px; overflow: hidden; transition: height 200ms ease;"
          >
            <div
              style="display: none;"
            >
              <div
                class="bpk-info-banner__children-container"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkInfoBanner should render correctly hidden 1`] = `<DocumentFragment />`;

exports[`BpkInfoBanner should render correctly with no type specified 1`] = `
<DocumentFragment>
  <div
    style="height: auto; overflow: visible; transition: height 200ms ease;"
  >
    <div>
      <div>
        <section
          class="bpk-info-banner bpk-info-banner--info"
          role="alert"
        >
          <div
            class="bpk-info-banner__header"
          >
            <span
              class="bpk-info-banner__icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class="bpk-info-banner__info-icon"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 1.5A10.5 10.5 0 1022.5 12 10.5 10.5 0 0012 1.5zM12 6a1.498 1.498 0 11-1.498 1.498A1.498 1.498 0 0112 6zm1.493 10.676a1.5 1.5 0 01-2.98.001l-.01-.175-.003-4.501.01-.176a1.5 1.5 0 012.98 0l.01.175.003 4.501z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="bpk-info-banner__message"
            >
              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
            </span>
          </div>
          <div
            style="height: 0px; overflow: hidden; transition: height 200ms ease;"
          >
            <div
              style="display: none;"
            >
              <div
                class="bpk-info-banner__children-container"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
